--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   --text-primary:#000;
   --bgPrimary:#fff;
  --bgSecondary: #F9F9F9;
- --pink: #0071bd;
+ --pink: #35a5f0;
  --light-blue: #e6f7ff;
  --border: #d9d9d9;
 }
@@ -321,10 +321,10 @@ width: 70%;
   display: flex;
   justify-content: space-between;
   gap: 50px;
-  color: #0071bd;
+  color: #35a5f0;
 }
 .chart-title{
-  color: #0071bd !important;
+  color: #35a5f0 !important;
 }
 .price-container{
   display: flex !important;
